infra/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fatura-personalizada-frontend-service
  namespace: fatura-personalizada-v2
spec:
  type: NodePort
  selector:
    app: fatura-personalizada-frontend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3001
