infra/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fatura-personalizada-frontend-ingress
  namespace: fatura-personalizada-v2
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-nginx
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - fatura-personalizada.oondemand.com.br
      secretName: app-tls
  rules:
    - host: fatura-personalizada.oondemand.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fatura-personalizada-frontend-service
                port:
                  number: 80
